--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,7 +26,7 @@
   <title>CMS</title>
 </head>
 
-<body>
+<body style="background-color: antiquewhite;">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
